{
    "version": 1,
    "name": "InputSystem_Actions",
    "maps": [
        {
            "name": "Controller",
            "id": "7f53dfed-1e75-42ad-bd7b-5983a2d4db1f",
            "actions": [
                {
                    "name": "LeftMouseHold",
                    "type": "Button",
                    "id": "787612fb-0cc5-47e4-b8c1-1cf66fd57659",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMouseTapped",
                    "type": "Button",
                    "id": "f27525d1-709f-4a20-9a09-d1b0aeb4e144",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMousePressed",
                    "type": "Button",
                    "id": "b73b67c5-c220-4a1e-a0db-41632bb08e3b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7747c28f-a8c5-43da-80ee-63b25272d248",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.11)",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "LeftMouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2daa0ced-caff-487e-81b3-d021a9f5f9ed",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(duration=0.1)",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "LeftMouseTapped",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d3041b0-e920-420f-a7e0-3f38bbae343b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMousePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}